--- a/src/app/event-create/event-create.component.html
+++ b/src/app/event-create/event-create.component.html
@@ -3,7 +3,8 @@
         <h1 style="margin: auto;">Create</h1>
     </div>
     <div class="row" style="margin-top: 1rem;">
-        <form (submit)="onSavePost(postForm)" #postForm="ngForm" >
+        <mat-spinner *ngIf="isLoading"></mat-spinner>
+        <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading" >
             <mat-card>
                 <mat-form-field>
                     <input matInput type="text" [ngModel]="post?.title" name="enteredTitle" placeholder="Enter Title" required>
@@ -20,7 +21,10 @@
                 <mat-form-field>
                     <textarea matInput rows="6" [ngModel]="post?.content" name="enteredValue" placeholder="Tell us about your event" required></textarea>
                 </mat-form-field>
-                
+                <div >
+                    <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button><br>
+                    <input type="file" #filePicker >
+                </div>
                 <button mat-raised-button color="accent" type="submit" t>Save Post</button>
             </mat-card>
     
