--- a/src/app/events/upcoming/upcoming.component.html
+++ b/src/app/events/upcoming/upcoming.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-<div class="row" *ngIf="posts.length > 0">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+<div class="row" *ngIf="posts.length > 0 && !isLoading" >
   <mat-card class="event" *ngFor="let post of posts" >
     <mat-card-header >
       <mat-card-title>
@@ -27,6 +28,6 @@
 
   
 </div>  
-<p class="mat-body-1 info-text" *ngIf="posts.length ==0">* No posts added yet</p>
+<p class="mat-body-1 info-text" *ngIf="posts.length ==0 && !isLoading">* No posts added yet</p>
 
 </div>
